<resources>
    <string name="app_name">ZoomImage</string>
    <string-array name="planet_titles">
        <item name="mercury"> Mercury</item>
        <item name="venus">Venus</item>
        <item name="earth">Earth</item>
    </string-array>

    <string name="action_settings">Settings</string>
    <string name="drawer_open">Drawer open</string>
    <string name="drawer_close">Drawer close</string>


        <string name="navigation_drawer_open">Open navigation drawer</string>
        <string name="navigation_drawer_close">Close navigation drawer</string>
        <string name="openDrawer">open_drawer</string>
        <string name="closeDrawer">close_drawer</string>

        <!-- Navigation Drawer menu labels -->
        <string name="nav_department">Department</string>
        <string name="nav_hostel">Hostels</string>
        <string name="nav_library">Library</string>
        <string name="nav_canteen">Canteen</string>
        <string name="nav_banks">Banks</string>
        <string name="nav_sports">Sports</string>

        <!-- Toolbar titles when navigation menu item is selected -->
        <string-array name="nav_item_activity_titles">
            <item>Department</item>
            <item>Hostels</item>
            <item>Library</item>
            <item>Canteen</item>
            <item>Banks</item>
            <item>Sports</item>

        </string-array>

        <string name="activity_title_about_us">About Us</string>
        <string name="activity_title_privacy_policy">Privacy Policy</string>
        <string name="action_clear_all">Clear All</string>
        <string name="action_logout">Logout</string>
        <string name="action_mark_all_read">Mark All as Read</string>
        <string name="privacy_policy">Privacy Policy</string>
</resources>
