<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="app.com.example.simran.sim.MainActivity">

    <item
        android:id="@+id/department"
        android:title="Department"/>
    <item
        android:id="@+id/seminar_halls"
        android:title="Seminarhalls">

    </item>
    <item
        android:id="@+id/hostels"
        android:title="Hostels">

    </item>
    <item
        android:id="@+id/residences"
        android:title="residences">
    </item>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_department"

            android:title="@string/nav_department" />
        <item
            android:id="@+id/nav_hostel"

            android:title="@string/nav_hostel" />
        <item
            android:id="@+id/nav_library"

            android:title="@string/nav_library" />

        <item
            android:id="@+id/nav_canteen"

            android:title="@string/nav_canteen" />

        <item
            android:id="@+id/nav_banks"

            android:title="@string/nav_banks" />
        <item
            android:id="@+id/nav_sports"

            android:title="@string/nav_sports" />
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:title="About us" />
            <item
                android:id="@+id/nav_privacy_policy"
                android:title="@string/privacy_policy" />
        </menu>
    </item>

</menu>
